# Pool_python

py04/ex0/: ft_ancient_text.py
py04/ex1/: ft_archive_creation.py
py04/ex2/: ft_stream_management.py
py04/ex3/: ft_vault_security.py
py04/ex4/: ft_crisis_response.py
py05/ex0/: stream_processor.py
py05/ex1/: data_stream.py
py05/ex2/: nexus_pipeline.py
py06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
py06/alchemy/: potions.py
py06/alchemy/grimoire/: __init__.py  spellbook.py  validator.py
py06/alchemy/transmutation/: __init__.py  advanced.py
py07/: .gitignore
py07/ex0/: Card.py  CreatureCard.py  main.py
py07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
py07/ex2/: Combatable.py  EliteCard.py  Magical.py  main.py
py07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  main.py
py07/ex4/: TournamentCard.py  TournamentPlatform.py  main.py
py08/ex0/: construct.py
py08/ex1/: loading.py  pyproject.toml
py08/ex2/: .env.example  oracle.py
py09/: .gitignore
py09/ex0/: space_station.py
py09/ex1/: alien_contact.py
py09/ex2/: space_crew.py
