[tool.poetry]
name = "ex1"
version = "0.1.0"
description = ""
authors = ["ilias <iliaschokairi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
